# ChangeLog for dev-db/postgresql
# Copyright 1999-2019 Gentoo Authors; Distributed under the GPL v2
# (auto-generated from git log)

*postgresql-9.6.14 (13 Jul 2019)

  13 Jul 2019; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +files/postgresql-9.6-openssl-1.1.0.patch, +files/postgresql.service-9.6-r1,
  +files/postgresql.tmpfiles, +postgresql-9.6.14.ebuild,
  -files/postgresql-9.6-no-des.patch, -files/postgresql.service-9.6,
  -postgresql-9.6.4.ebuild:
  dev-db/postgresql: Update to 9.6.14 & OpenSSL 1.1.0.

*postgresql-9.6.4 (22 Aug 2017)

  22 Aug 2017; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +files/postgresql-9.6.3-no-server.patch, +files/postgresql.confd-9.3,
  +files/postgresql.init-9.3-r1, +files/postgresql.service-9.6,
  +postgresql-9.6.4.ebuild, -files/postgresql-9.2-9.4-tz-dir-overflow.patch,
  -files/postgresql-9.6.1-no-server.patch, -files/postgresql.confd,
  -files/postgresql.init, -files/postgresql.init-9.3,
  -files/postgresql.init-pre_9.2, -files/postgresql.service,
  -postgresql-9.6.1-r1.ebuild:
  dev-db/postgresql: Update to 9.6.4.

*postgresql-9999 (09 Aug 2015)
*postgresql-9.5_alpha1 (09 Aug 2015)
*postgresql-9.4.4 (09 Aug 2015)
*postgresql-9.4.3 (09 Aug 2015)
*postgresql-9.3.9 (09 Aug 2015)
*postgresql-9.3.8 (09 Aug 2015)
*postgresql-9.2.13 (09 Aug 2015)
*postgresql-9.2.12 (09 Aug 2015)
*postgresql-9.1.18 (09 Aug 2015)
*postgresql-9.1.17 (09 Aug 2015)
*postgresql-9.0.22 (09 Aug 2015)
*postgresql-9.0.21 (09 Aug 2015)

  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org>
  +files/pg_ctl-exit-status.patch, +files/postgresql-9.0-no-server.patch,
  +files/postgresql-9.1-no-server.patch,
  +files/postgresql-9.1-tz-dir-overflow.patch,
  +files/postgresql-9.2-9.4-tz-dir-overflow.patch,
  +files/postgresql-9.2-no-server.patch,
  +files/postgresql-9.3-no-server.patch,
  +files/postgresql-9.4-no-server.patch,
  +files/postgresql-9.5-no-server.patch, +files/postgresql-check-db-dir,