@@ -9,15 +9,15 @@ AUX postgresql.confd-9.3 2477 SHA256 1d144dc8c5eb2a9a345823b6b4631f633c2d83e49c5
 AUX postgresql.init-9.3-r1 4999 SHA256 17c4639ddab32215cf4ad472394cc854b8521b28f736fb48670c83a2835989ab SHA512 cd181bb6d3ed72f786cd21a5c0c012bac3847adcf9da2e0b78eb212c9515953b2f1a2006faf475bfaa9a8c91371bda34f558f83ae010daa7cd670923526e39a0 WHIRLPOOL 14adb59dd079b9db8594cd3e6c54143ccc2b9fdbdbc3cbf4891f60ed2117ebb07cf9c9a8d60c912f023ec0c860bc7692318081ab368a265ceac1dfce43e3a6f0
 AUX postgresql.service-9.6-r1 1477 SHA256 42c8458a3e58e38c738d003eaec80d788ea2f5ed8f23d0d06d61297d0c0a804f SHA512 9e2b04923f6ebec1424c0f276c58a6a0c4933f2de5e2a9776169227729afd06ce5284461be8b6ed70e5aaff2a68b9f96c6893d867d35761c9977f9847ccfe93d WHIRLPOOL c8068b9ac951b79c6c69eabdc51360eebd32964d8851335c8828a53482ab889d210c8bf00b36550172afa9d171886d90e574a5ffa37ef095b5a9f62d37492051
 AUX postgresql.tmpfiles 39 SHA256 648794e824e2fe61cbd591c8d533e15391e47382a68f56038b075acce5d3f112 SHA512 498060f2a597cf374f4fb31deaa2d6c5b00edef68efc0e71b82bfc20b717ae12518ba18fcb455a0c518ebba1a0868f38321470616151d02fa79b889a66dcb9f8 WHIRLPOOL 6288c1c2b899d3b2c75fcde1d4cabc9d2421aecd4ede13a8355f36a96986cddc237a03698dc27ebd9ddf87b682fb60f0cdf816829a685fa574ca7b05746ae493
-DIST postgresql-9.6.14.tar.bz2 18787744 SHA256 3f08c265c9ae814f727461408ab24fdf3d954c4f7ae42d9c97b3c7e03fc31a22 SHA512 dccc183a6992ef4ece4ef5c638339708ab484e571ecd66ed993c9071cd55f250b4277fd3367f9a5ee545aa83e29dc5f7a239200e200e3314d5acc847f35e790c WHIRLPOOL 3b46e6373f7cccdf2171188ec1a39da7572b50d2ff6b204d572b28d95d946c3b32f322276f3118757669a0b5e96fe21505dcd7e35e6595427657ab3af500b59b
-EBUILD postgresql-9.6.14.ebuild 14841 SHA256 2e8120bd97c3bcae3b8ad2a06ad96a6623dcb88a129f7cd26f2f4b13366a319c SHA512 437ec288d0147b3fac35fa0c6847f3cbfb22ff3abcb305f8940a262524f33513d20b0edec68a5c96f38eb6c699811c56bb8d9e20cff6be8217276baf42467c6f WHIRLPOOL d30b805162090e22e43c2118500e5776dd6eae4aec573b02f8c732e00179dde827b04b12e06457c1e2cd332bc0762bc75628ad2a74b2abd3f0742b3b86993e52
-MISC ChangeLog 33574 SHA256 ad6d1cef98d6eca674dc618ade0b60ca7b57347c38ee45432a91ff69d5b276ad SHA512 4fcb04bd5cd09070fb299e9d7409c55a5ce4e8c0e688a27b7becfc1a5e80769aac74a8265014763c241c78c2ca457a8638d6bb0c4f583c81f36b6eba03c1221e WHIRLPOOL 7eb7e3b2bbe41b40ace36425da254932f2f1fe795adf55bb16b9bc505c5106a272debc22ef9208ad6540e273a826255afa18e0f808e66ad6b7f10a4dfb603f52
+DIST postgresql-9.6.17.tar.bz2 18812282 SHA256 f6e1e32d32545f97c066f3c19f4d58dfab1205c01252cf85c5c92294ace1a0c2 SHA512 a76f328523517f664e4fc59a4d27e476bc6300e49370712030caae40aa160acb1e6aecc7cd3b3440125713069932df812eb8d75377a3df63e59c9292419c2aa8 WHIRLPOOL 5f282ba7e80a5db3046915151d9e0faba9bad432e5e93bfacb81aeb3db7105520f838e1c35d1e0f9a2eb41094dfd65543235d3803df18b71494f952809641b79
+EBUILD postgresql-9.6.17.ebuild 14770 SHA256 abb38eb243a42706dcfdeccf8bc03ceab04d04637567b57d0b8150784af44610 SHA512 8d3c7fa3288f49cfe0becaca646ebf778744bfe424ff7e42c10662ce19b0d94ba8cc08815c21811c973d7904920a37a07d53a9bf01a2100cad9ab1a71e31b51b WHIRLPOOL 8357b1587d75de9545926b87944f5ba5a0d837952103911d1fe30c354618247904077366ec7976c731bc7ea6c24107affa7c575aafadaca216447c5dba2934b3
+MISC ChangeLog 33777 SHA256 ba0fa8ffbb514e6393938089f4e2b9d3247e0e6c88f9b5e5925d5fdcc2f26557 SHA512 a60fb842c2b3bfe36535b33b3ad8e7eb065c0a549a6f8f33e4c7516e37167d6bb80c543bf25eeff6ce4749013fc996f4be9c10465c5d66d20b0bff4eaadf31b2 WHIRLPOOL e633c5be3e80706f818f505aa9c584fd3570231553bfd8d695ad46849de1a83804976b14d0d21bcb459180d08b4e19acf7a06d91eb78f047ce1f7ddab02bf435
 MISC ChangeLog-2015 18629 SHA256 175d54e2f2cae4fbae5aec42c3aa070cb1534683f5c1d17ad287ca45064aa287 SHA512 3b8c9debff6442f07f3a3a384e94bae6a80b2fbabc759a334eaccdce9f62b403acf73ec811f1923cb1a6f0f0b2cc9fc702b9f0c24cf6d33acc0783c0af574e6d WHIRLPOOL acc1735b72d8e23dca195d8839ec3ff66bf704a79d980bae17856cbf00ec16d0bf6ef012ac506f42e8f3f40de8820ceb97924eb6310cf9c30634d49a97805ec9
 MISC metadata.xml 751 SHA256 97274deca46bb3ef708b8fe348946d9119220d8ba34bf90c0044675a00eeb5f2 SHA512 726f30ec991194427b2dbcdf650778dbe0f169cb305d569918404d403deef397aef7ec3f1a5269c15f7ec7fc5506dc534203323379f1d0acc475eeb8d75d0cf1 WHIRLPOOL 8372aaaaa2044be729eaa5d2e620dff368f16bacd450a48b048338a51f1500fc85fe5865d68f3e06b783732e823566b6dc7b7bc4f6149893cda8e452daefc331
 -----BEGIN PGP SIGNATURE-----
 
-iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCXSndfQAKCRDP2g+bNZZC
-IkBjAQDxzeRCKH5qW0emuA8mDqfPIB85MNk7/thMO/RZYymSXgD/dteO66ccIcg6
-Dyn8YSOukaxtfFOb6akWMGXJTCRuvgg=
-=28gP
+iHUEARYIAB0WIQRRMled0VQO0j4ExaDP2g+bNZZCIgUCXoqY9QAKCRDP2g+bNZZC
+IoWOAP0frj6lAa1O7cQdGFmBL8qLn2U+3VXcsxOub8aCY5S8lgEA35XLoN9Vsxh2
+yDLYj0/kdxkxCItsoJwTCq2umRH3tgc=
+=kF2g
 -----END PGP SIGNATURE-----
