@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/postgresql
-# Copyright 1999-2019 Gentoo Authors; Distributed under the GPL v2
+# Copyright 1999-2020 Gentoo Authors; Distributed under the GPL v2
 # (auto-generated from git log)
+
+*postgresql-9.6.17 (06 Apr 2020)
+
+  06 Apr 2020; Andrew John Hughes <gnu_andrew@member.fsf.org>
+  +postgresql-9.6.17.ebuild, -postgresql-9.6.14.ebuild:
+  dev-db/postgresql: Update from 9.6.14 to 9.6.17
 
 *postgresql-9.6.14 (13 Jul 2019)
 
